# markov

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp  markov.h
